[project]
name = "atividade-avaliativa-dashboard-unit-variable-cost"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Acauhi",email = "mateusacauhi@bluems.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "dash (>=3.0.4,<4.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "dash-bootstrap-components (>=2.0.2,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

